feat: openai provider
Signed-off-by: 117503445 <t117503445@gmail.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
         - markdown-translate-dev-vsc:/root/.vscode-server
     stdin_open: true
     tty: true
+    env_file:
+      - .env
 
 volumes:
   markdown-translate-dev-vsc:
