--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -20,9 +20,9 @@ jobs:
         id: buildx
         uses: docker/setup-buildx-action@v3
 
-      - run: docker build -t builder -f Dockerfile.builder .
+      - run: docker build -t markdown-translate-builder -f Dockerfile.builder .
 
-      - run: docker run --rm -v $(pwd):/workspace builder
+      - run: docker run --rm -v $(pwd):/workspace markdown-translate-builder
 
       # https://github.com/softprops/action-gh-release
       - name: Release
